--- a/README.mkd
+++ b/README.mkd
@@ -2,3 +2,15 @@
 
 A place to keep scripts I've written to make various GIS & map-design tasks
 simpler and more efficient.
+
+## shadesrtm.sh
+
+A demonstration of my hillshade creation process in script form. Makes use of gdaldem utilities from newer versions of GDAL.
+
+## tif2geo.sh
+
+This script reads the geographic coordinates from one TIF file (using gdalinfo) and applies them to another TIF (using gdal_translate). Useful for restoring this data after making edits in a non-geo-aware program, such as GIMP or ImageMagick.
+
+## tms-prune.py
+
+Searches a TMS tileset for files that fall outside of the world bounding box (which can get created by metatiling, bounding box errors, etc). It assumes a web-mercator projection (default for OpenStreetMap, Google Maps, MapBox tilesets).
